# om-syrinx

./: .editorconfig  .gitignore  .npmrc  .prettierignore  .renovaterc.json  .taplo.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  filename.js  index.d.ts  index.js  install.mjs  jsconfig.json  native.d.ts  native.js  package.json  pnpm-lock.yaml  renovate.json  rust-toolchain.toml  test.js  version.d.ts  version.js  version.sh
.cargo/: config.toml
.github/workflows/: CI.yml  build-and-upload.yml  release-please.yml  test.yml
.release-please/: release-please-config.json
__test__/: index.spec.mjs
lib/: filename.js  index.d.ts  index.js  install.js  native.d.ts  native.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: error.rs  lib.rs  stream_receiver.rs  synthesis_option.rs  synthesizer.rs  worker.rs
src/encoder/: config.rs  mod.rs  opus.rs  pcm.rs
test/: index.js  jsconfig.json
