[package]
edition = "2024"
name = "om-syrinx"
version = "0.4.3"  # x-release-please-version

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "=3.3.0", default-features = false }
napi-derive = "=3.2.5"

jpreprocess = "=0.12.0"
jbonsai = "=0.4.0"
audiopus = "=0.3.0-rc.0"
serde_json = "=1.0.145"
thiserror = "=2.0.12"

# https://github.com/Lakelezz/audiopus_sys/pull/23
[patch.crates-io.audiopus_sys]
git = "https://github.com/sevenc-nanashi/audiopus_sys"
# sevenc-nanashi:chore/update-opus
rev = "00e9d168493710193ee133bc7fbb50715a1f6e61"

[build-dependencies]
napi-build = "=2.2.3"
cargo-lock = "=10.1.0"

[profile.release]
lto = true
strip = "symbols"
