[package]
edition = "2024"
name = "om-syrinx"
version = "0.5.0"  # x-release-please-version

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "=3.8.1", default-features = false }
napi-derive = "=3.5.0"

jpreprocess = "=0.12.0"
jbonsai = "=0.4.0"
opus2 = "0.3.3"
serde_json = "=1.0.148"
thiserror = "=2.0.17"

[build-dependencies]
napi-build = "=2.3.1"
cargo-lock = "=11.0.0"

[profile.release]
lto = true
strip = "symbols"
